--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,148 @@
     font-size: 20px;
     width: 50%;
 }
+
+
+
+@media screen and (max-width: 480px){
+    .landing{
+        display: block;
+    }
+
+
+   #Welcome h1{
+    margin-top: 0px;
+    margin-left: 50px;
+    padding-top: 50px;
+    font-size: 50px;
+    font-weight: 600;
+   }
+
+   #Welcome p{
+    margin-left: 50px;
+    letter-spacing: 5px; 
+   }
+
+   .btns{
+    margin-top: 5rem;
+    margin-left: 5px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .btn1{
+    padding: 15px;
+    width: 150px; 
+    border-radius: 10px;
+    border: none;
+    background-color: #fc3d23;
+    color: white;
+} 
+  .btn2{
+    width: 150px;
+  }
+   
+  .image img{
+    width: 100%;
+    margin-top: 2rem;
+   }
+
+   .empty{
+    background-color: gray;
+    height: 2px;
+    width: 50%;
+    margin-left: 90px;
+    margin-top: -2px;
+   }
+
+   .logos{
+    margin-top: 4rem;
+    display: grid;
+    justify-content: center;
+    margin: 50px;
+   }
+
+   .logos h4{
+    font-size: 10px;
+    margin-left: 20px;
+  }
+  .logo{
+    margin-top: 1rem;
+  }
+
+  .box{
+    width: 80%;
+    height: 30vh;
+    background-color: white;
+    position: relative;
+    top: 60px;
+    left: 40px;
+    border: #fc3d23 2px solid;
+    margin-bottom: 5rem;
+    padding: 6px;
+    padding-left: 50px;
+    padding-top: 25px;
+  }
+
+  .box button{
+    padding:10px;
+    width: 150px; 
+    border-radius: 10px;
+    border: white 2px solid;
+    background-color: #fc3d23;
+    color: white;
+    font-weight: 600;
+    /* position: relative; */
+    left: 25px;
+    bottom: 0px;
+  }
+
+  .landingpage{
+    background-image: url("images/Adoração.jpg");
+    height: 180vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .footerpage{
+    display: block;
+    justify-content: space-between;
+    gap: 4rem;
+  }
+
+  .footerimage img{
+    margin-left: 1rem;
+  width: 90%;
+  height: 200px;
+  margin-bottom: 1rem;
+  border-radius: 20px
+ }
+
+ .footer1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+  }
+
+  .message{
+    margin-top: 2rem;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 20px;
+    width: 100%;
+ }
+  
+ .btn3{
+    padding:10px;
+    width: 150px; 
+    border-radius: 10px;
+    border: none;
+    background-color: #fc3d23;
+    color: white;
+    position: relative;
+    left: 100px;
+    margin-bottom: 4rem;
+ }
+}
